# vaillant-plus-cn-api

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: run_test.yaml
tests/: common.py  conftest.py  test_api.py  test_model.py  test_websocket.py
vaillant_plus_cn_api/: __init__.py  api.py  const.py  errors.py  model.py  websocket.py
