[tool.poetry]
name = "vaillant-plus-cn-api"
version = "0.3.4"
description = "Python package for interacting with Vaillant devices sold in China mainland using API"
authors = ["daxingplay <daxingplay@gmail.com>"]
readme = "README.md"
packages = [{include = "vaillant_plus_cn_api"}]
homepage = "https://github.com/daxingplay/vaillant-plus-cn-api"

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "^3.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
aresponses = "^2.1.6"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError", "TYPE_CHECKING", "@overload"]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["vaillant_plus_cn_api"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
